# openimageio

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.rs
assets/: j0.3toD__F16_RGBA.exr
bbl-oiio/: CMakeLists.txt
bbl-oiio/bind/: attrdelegate.cpp  bbl-misc.cpp  color.cpp  deepdata.cpp  filesystem.cpp  filter.cpp  imagebuf.cpp  imagebufalgo.cpp  imagecache.cpp  imageio.cpp  paramlist.cpp  typedesc.cpp  ustring.cpp
bind/: bbl-misc.cpp  deepdata.cpp  imagebuf.cpp  imagecache.cpp  imageio.cpp  paramlist.cpp  typedesc.cpp  ustring.cpp
examples/: over.rs
openimageio-sys/: Cargo.toml  README.md  build.rs
openimageio-sys/bbl-oiio/: CMakeLists.txt
openimageio-sys/bbl-oiio/bind/: attrdelegate.cpp  bbl-misc.cpp  color.cpp  deepdata.cpp  filter.cpp  imagebuf.cpp  imagebufalgo.cpp  imagecache.cpp  imageio.cpp  imagespec.cpp  paramlist.cpp  texture.cpp  typedesc.cpp  ustring.cpp  vecparam.cpp
openimageio-sys/bindings/: oiio.rs
openimageio-sys/src/: lib.rs
src/: attribute.rs  color.rs  cspan.rs  file_system.rs  image_buf.rs  image_cache.rs  image_io.rs  image_spec.rs  image_specification.rs  lib.rs  misc.rs  param_value.rs  region.rs  region_of_interest.rs  roi.rs  string.rs  string_view.rs  texture.rs  type_desc.rs  type_description.rs  ustring.rs
src/image_buffer/: adapters.rs  internal.rs  mod.rs  pixels.rs
src/image_buffer/adapters/: egui.rs  image.rs  mod.rs  tiny_skia.rs
src/image_buffer/algorithms/: channels.rs  checker.rs  color_convert.rs  compare.rs  convolve.rs  crop.rs  cut.rs  fill.rs  filter.rs  generators.rs  invert.rs  kernel.rs  mod.rs  noise.rs  operators.rs  over.rs  pixel_hash.rs  premult.rs  re_orient.rs  render_text.rs  resize.rs  rotate.rs  transform.rs  warp.rs  zero.rs
src/texture/: batch_options.rs  mod.rs  options.rs
