cargo-features = ["edition2024"]

[package]
name = "openimageio"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0 OR BSD-3-Clause"
authors = ["Moritz Moeller <virtualritz@protonmail.com>", "Anders Langlands"]
homepage = "https://openimageio.org/"

[build-dependencies]
bbl-build = { git = "https://github.com/anderslanglands/bbl-build-rs.git" }
log = "0.4"

[dependencies]
anyhow = "1"
camino = "1"
document-features = "0.2"
egui = { version = "0.28", default-features = false, optional = true }
#half = { version = "2.4", features = ["num-traits"], optional = true }
image = { version = "0.25", default-features = false, features = [
    "png",
], optional = true }
log = "0.4"
num-traits = "0.2"
num_enum = "0.7"
once_cell = { version = "1", features = ["parking_lot"] }
parking_lot = { version = "0.12", features = [
    "arc_lock",
    "deadlock_detection",
    "nightly",
] }
ustr = "1"

[features]
default = ["algorithms"]
## Enable a bunch of composting- & generator methods on `ImageBuffer`.
algorithms = []
## Enable one-way conversion from `ImageBuffer` to `egui::ColorImage`.
egui = ["dep:egui"]
# Enable `f16` support.
#half = ["dep:half"]
## Enable one-way conversion from `ImageBuffer` to `image::DynamicImage`.
image = ["dep:image"]
#! ### Special Features
## Make the OpenImageIO FFI this crate uses public.
ffi = []

[package.metadata.docs.rs]
features = ["algorithms", "egui", "image"]
