[package]
name = "openimageio"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Moritz Moeller <virtualritz@protonmail.com>"]
homepage = "https://openimageio.org/"

[features]
default = ["algorithms"]
## Enable the [`algorithms`]-module methods on `ImageBuffer`.
algorithms = []
## Enable one-way conversion from `ImageBuffer` to
## [`egui::ColorImage`](https://docs.rs/egui/latest/egui/struct.ColorImage.html).
egui = ["dep:egui"]
## Enable support for `glam::f32::Mat3`.
glam = ["dep:glam"]
## Enable `f16` support. Not yet implemented.
half = ["dep:half"]
## Enable conversion of `ImageBuffer` from/to
## [`image::DynamicImage`](https://docs.rs/image/latest/image/enum.DynamicImage.html)
## and its variants.
image = ["dep:image"]
## Enable support for `mint::ColumnMatrix3<f32>`.
mint = ["dep:mint"]
## Enable support for one-way conversion from
## [`tiny-skia::Pixmap`](https://docs.rs/tiny-skia/latest/tiny_skia/struct.Pixmap.html) to `ImageBuffer`.
##
## This is useful to get data from a bunch of SVG-producing crates, that use `tiny-skia` as a rendering backend, into OIIO.
## For example [`typst-render`](https://docs.rs/typst-render).
tiny-skia = ["dep:tiny-skia"]
#! ### Special Features
#!
## Add aliases that miror the original C++ type/method names as much as
## possible (i.e. Rust naming conventions are still used on these).
cpp_api_names = []
## Make the OpenImageIO FFI this crate uses public.
ffi = []

[dependencies]
ahash = "0.8"
anyhow = "1"
bitflags = "2.8"
bytemuck = "1"
camino = "1"
document-features = "0.2"
egui = { version = "0.30", default-features = false, optional = true }
float-derive = "0.1"
function_name = "0.3"
glam = { version = "0.29", optional = true }
half = { version = "2.4", features = ["num-traits"], optional = true }
image = { version = "0.25", default-features = false, features = [
    "rayon",
    "png",
], optional = true }
log = "0.4"
mint = { version = "0.5", optional = true }
nalgebra = "0.33"
num-traits = "0.2"
num_enum = "0.7"
once_cell = { version = "1", features = ["parking_lot"] }
openimageio-sys = { version = "0.1", path = "openimageio-sys" }
parking_lot = { version = "0.12.2", features = [
    "arc_lock",
    "deadlock_detection",
    "nightly",
] }
smallvec = { version = "1.13", features = [
    "const_generics",
    "const_new",
    "specialization",
] }
tiny-skia = { version = "0.11", default-features = false, features = [
    "simd",
    "std",
], optional = true }
ustr = "1"

[dev-dependencies]
viuer = "0.9"

#[patch.crates-io]
#viuer = { git = "https://github.com/virtualritz/viuer" }

[package.metadata.docs.rs]
features = [
    "algorithms",
    "egui",
    "glam",
    "half",
    "image",
    "mint",
    "tiny-skia",
    "cpp_api_names",
]
