[package]
name = "openimageio-sys"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Moritz Moeller <virtualritz@protonmail.com>", "Anders Langlands"]
homepage = "https://openimageio.org/"

[features]
default = []
builtin_bindings = []

[build-dependencies]
cmake = "0.1"
bbl-build = { git = "https://github.com/virtualritz/bbl-build-rs.git" }
#bbl-build = { path = "../../bbl-build-rs" }
log = "0.4"
